k8s/vpntorrent/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpntorrent-deployment
  namespace: vpntorrent
  labels:
    app: vpntorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vpntorrent
  template:
    metadata:
      labels:
        app: vpntorrent
    spec:
      containers:
        - name: gluetun
          image: qmcgaw/gluetun
          imagePullPolicy: IfNotPresent
          # This is the Kubernetes equivalent of --cap-add=NET_ADMIN
          securityContext:
            capabilities:
              add: ["NET_ADMIN"]
          volumeMounts: # <-- ADD THIS SECTION
            - name: tun-device
              mountPath: /dev/net/tun

        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest
          imagePullPolicy: IfNotPresent
          ports:
            # This port is exposed from the pod for the Service to target
            - name: webui
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: qb-config
              mountPath: /config
            - name: qb-downloads
              mountPath: /downloads
      volumes:
        - name: tun-device
          hostPath:
            path: /dev/net/tun
            type: CharDevice
        - name: qb-config
          persistentVolumeClaim:
            claimName: qbittorrent-config-pvc
        - name: qb-downloads
          persistentVolumeClaim:
            claimName: qbittorrent-downloads-pvc
