k8s/vpntorrent/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-service
  namespace: vpntorrent
spec:
  type: ClusterIP
  selector:
    app: vpntorrent
  ports:
    - name: webui
      port: 8080
      targetPort: 8080
      protocol: TCP
